# garmin-mtp-cli

./: CMakeLists.txt  LICENSE  Makefile  PACKAGING.md  README.md  package.json  vcpkg.json
.github/workflows/: ci.yml
examples/: README.md  cli-ciq-log.md  natural-language.md
scripts/: install-codex-skill.js  test-skill-installer.js
skills/garmin-mtp/: SKILL.md
skills/garmin-mtp/agents/: openai.yaml
skills/garmin-mtp/references/: directories.md  parent-id-fallback.md
src/: cli.c  cli.h  commands.c  commands.h  commands_no_mtp.c  file_type.c  file_type.h  main.c  manual.c  manual.h  memory.c  memory.h  mtp_device.c  mtp_device.h  mtp_tree.c  mtp_tree.h  path.c  path.h  process_conflict.c  process_conflict.h  progress.c  progress.h  push_args.c  push_args.h
tests/: cli_test.c  file_type_test.c  manual_test.c  mtp_tree_test.c  path_test.c  process_conflict_test.c  push_args_test.c  test.h  test_main.c
